# Smart_watch_ESP32

./: README.md
Smart_wach_Esp32/: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
Smart_wach_Esp32/main/: CMakeLists.txt  Kconfig.projbuild  LIS2MDL_Capteur.c  LIS2MDL_Capteur.h  LSM6DO_capteur.c  LSM6DO_capteur.h  i2c_example_main.c
Smart_wach_Esp32/main/BLE/: ble_init.c  ble_init.h  gatt_ser_gatt.c  gatt_ser_gatt.h  gatt_server_profile.c  gatt_server_profile.h
Smart_wach_Esp32/main/Gestion_Affichage_LCD/: Gestion_affichage.c  Gestion_affichage.h
Smart_wach_Esp32/main/LIS2MDL/: lis2mdl_reg.c  lis2mdl_reg.h
Smart_wach_Esp32/main/LSM6DSO/: lsm6dso_reg.c  lsm6dso_reg.h
Smart_wach_Esp32/main/WIFI_SNTP_RTC/: WIFI_SNTP_RTC_SYNC.c  WIFI_SNTP_RTC_SYNC.h
